# trading_test_bot

./: Dockerfile  pyproject.toml
src/: macd.py  main.py  settings.py  telegram_bot_api.py  trading.py
