[tool.poetry]
name = "test-bot"
version = "0.1.0"
description = ""
authors = ["konkov.danil <konkov.danil@kbmi.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
schedule = "^1.2.1"
yfinance = "^0.2.36"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
